--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="bin/windows/keksdose.exe"
+export_path="bin/Win/keksdose.exe"
 script_export_mode=1
 script_encryption_key=""
 
