--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -2,7 +2,7 @@
 
 name="Windows Desktop"
 platform="Windows Desktop"
-runnable=true
+runnable=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
@@ -70,7 +70,7 @@ keystore/release_user=""
 keystore/release_password=""
 one_click_deploy/clear_previous_install=false
 version/code=1
-version/name="5.6"
+version/name="5.6.2"
 version/min_sdk=19
 version/target_sdk=30
 package/unique_name="org.sera.kora"
