--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -32,11 +32,11 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PoolStringArray(  )
 application/icon="res://img/Icons/game_icon.ico"
-application/file_version="0.6.6"
-application/product_version="0.6"
+application/file_version="0.7.1"
+application/product_version="0.7"
 application/company_name="CreativeDudesStudio"
 application/product_name="Keksdose"
-application/file_description=""
+application/file_description="A 2D PixelArt-Plattformer in a Comic Fantasy Setting."
 application/copyright="2022 by S3R43o3"
 application/trademarks=""
 
