--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -203,3 +203,45 @@ permissions/write_sms=false
 permissions/write_social_stream=false
 permissions/write_sync_settings=true
 permissions/write_user_dictionary=true
+
+[preset.1]
+
+name="Windows Desktop"
+platform="Windows Desktop"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="bin/Win/keksdose.exe"
+script_export_mode=1
+script_encryption_key=""
+
+[preset.1.options]
+
+custom_template/debug=""
+custom_template/release=""
+binary_format/64_bits=true
+binary_format/embed_pck=true
+texture_format/bptc=false
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
+texture_format/no_bptc_fallbacks=true
+codesign/enable=false
+codesign/identity_type=0
+codesign/identity=""
+codesign/password=""
+codesign/timestamp=true
+codesign/timestamp_server_url=""
+codesign/digest_algorithm=1
+codesign/description=""
+codesign/custom_options=PoolStringArray(  )
+application/icon="res://img/Icons/game_icon.ico"
+application/file_version="0.7.1"
+application/product_version="0.7"
+application/company_name="Creative Dudes Studio"
+application/product_name="Kora - PlaceHolder"
+application/file_description="A tiny PixelArt 2D Action-Runner"
+application/copyright="2022 all rights reseverd | S3R43o3"
+application/trademarks=""
